feat: avoiding variable reuse and using one angle to troubleshoot why kernel dies when training.

--- a/capstone/mlnd_capstone.ipynb
+++ b/capstone/mlnd_capstone.ipynb
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -1368,7 +1368,7 @@
    "source": [
     "\"\"\"\n",
     "Notice that the scope name conv1 has _2 appended to it, but it's still referring\n",
-    "to the same scope.  I assume this because when I set reuse to False, as shown above,\n",
+    "to the same scope.  I assume this is the case because when I set reuse to False, as shown above,\n",
     "the compiler says this variable already exists.\n",
     "\"\"\"\n",
     "conv = _conv('conv1', in_, [5,5,3,12], reuse=True)\n",
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -1413,46 +1413,50 @@
     "    \n",
     "    view_features = []\n",
     "\n",
-    "    for i in xrange(n_views):\n",
+    "    #for i in xrange(n_views):\n",
+    "    for i in xrange(1): #just avoid reusing var to see if kernel still dies\n",
     "        reuse = (i != 0) #reuse is False for the 0th angle, and true for all remaining angles\n",
     "        view = tf.gather(views, i) # NxWxHxC\n",
     "        #view has height, width, channel of 14, 14, 512\n",
     "        with tf.variable_scope(name_or_scope='multiview', reuse=reuse) as scope:\n",
-    "            if print_details:\n",
-    "                print(\"view i: \", i)\n",
     "            conv6 = tf.layers.conv2d(view, filters=512, kernel_size=3, strides=2, padding='same',reuse=reuse,name='conv6')\n",
-    "            if print_details:\n",
-    "                print(\"conv6: \",conv6)\n",
     "            #conv6 has h,w,c of 7,7,512\n",
     "            bn6 = tf.layers.batch_normalization(conv6, training=is_training,reuse=reuse,name='bn6')\n",
     "            relu6 = leaky_relu(bn6, name='relu6')\n",
     "            drop6 = tf.nn.dropout(relu6, keep_prob=keep_prob, name='drop6')\n",
-    "            #7 x 7 x 512\n",
     "\n",
+    "            #7 x 7 x 512\n",
     "            conv7 = tf.layers.conv2d(drop6, filters=512, kernel_size=3, strides=1, padding='valid',reuse=reuse,name='conv7')\n",
-    "            if print_details:\n",
-    "                print(\"conv7: \",conv7)\n",
     "            # (7 - 3 + 1) /1 = 5; so it's now 5 x 5 x 512\n",
     "            bn7 = tf.layers.batch_normalization(conv7, training=is_training,reuse=reuse,name='bn7')\n",
     "            relu7 = leaky_relu(bn7, name='relu7')\n",
     "            drop7 = tf.nn.dropout(relu7, keep_prob=keep_prob, name='drop7')\n",
-    "\n",
     "            #shape is now 5 x 5 x 512\n",
     "            '''\n",
     "            flatten last conv layer into 2D: batch x (width*height*channels)\n",
     "            '''\n",
     "            dim = np.prod(drop7.get_shape().as_list()[1:])\n",
-    "            reshape = tf.reshape(relu7, [-1, dim])\n",
+    "            flat = tf.reshape(relu7, [-1, dim],name='flat')\n",
+    "            view_features.append(flat)\n",
+    "            \n",
     "            if print_details:\n",
-    "                print(\"reshape: \",reshape)\n",
-    "            view_features.append(reshape)\n",
+    "                print(\"view i: \", i)\n",
+    "                print(\"conv6: \", conv6)\n",
+    "                print(\"bn6: \", bn6)\n",
+    "                print(\"relu6:\", relu6)\n",
+    "                print(\"drop6: \", drop6)\n",
+    "                print(\"conv7: \",conv7)\n",
+    "                print(\"bn7: \", bn7)\n",
+    "                print(\"relu7:\", relu7)\n",
+    "                print(\"drop7:\", drop7)\n",
+    "                print(\"flat: \",flat)\n",
     "        \n",
     "    return view_features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -1463,68 +1467,14 @@
      "text": [
       "view i:  0\n",
       "conv6:  Tensor(\"multiview/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "bn6:  Tensor(\"multiview/bn6/batchnorm/add_1:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "relu6: Tensor(\"multiview/relu6:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "drop6:  Tensor(\"multiview/drop6/mul:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
       "conv7:  Tensor(\"multiview/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
-      "reshape:  Tensor(\"multiview/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
-      "view i:  1\n",
-      "conv6:  Tensor(\"multiview_1/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
-      "conv7:  Tensor(\"multiview_1/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
-      "reshape:  Tensor(\"multiview_1/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
-      "view i:  2\n",
-      "conv6:  Tensor(\"multiview_2/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
-      "conv7:  Tensor(\"multiview_2/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
-      "reshape:  Tensor(\"multiview_2/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
-      "view i:  3\n",
-      "conv6:  Tensor(\"multiview_3/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
-      "conv7:  Tensor(\"multiview_3/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
-      "reshape:  Tensor(\"multiview_3/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
-      "view i:  4\n",
-      "conv6:  Tensor(\"multiview_4/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
-      "conv7:  Tensor(\"multiview_4/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
-      "reshape:  Tensor(\"multiview_4/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
-      "view i:  5\n",
-      "conv6:  Tensor(\"multiview_5/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
-      "conv7:  Tensor(\"multiview_5/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
-      "reshape:  Tensor(\"multiview_5/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
-      "view i:  6\n",
-      "conv6:  Tensor(\"multiview_6/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
-      "conv7:  Tensor(\"multiview_6/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
-      "reshape:  Tensor(\"multiview_6/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
-      "view i:  7\n",
-      "conv6:  Tensor(\"multiview_7/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
-      "conv7:  Tensor(\"multiview_7/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
-      "reshape:  Tensor(\"multiview_7/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
-      "view i:  8\n",
-      "conv6:  Tensor(\"multiview_8/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
-      "conv7:  Tensor(\"multiview_8/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
-      "reshape:  Tensor(\"multiview_8/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
-      "view i:  9\n",
-      "conv6:  Tensor(\"multiview_9/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
-      "conv7:  Tensor(\"multiview_9/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
-      "reshape:  Tensor(\"multiview_9/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
-      "view i:  10\n",
-      "conv6:  Tensor(\"multiview_10/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
-      "conv7:  Tensor(\"multiview_10/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
-      "reshape:  Tensor(\"multiview_10/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
-      "view i:  11\n",
-      "conv6:  Tensor(\"multiview_11/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
-      "conv7:  Tensor(\"multiview_11/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
-      "reshape:  Tensor(\"multiview_11/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
-      "view i:  12\n",
-      "conv6:  Tensor(\"multiview_12/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
-      "conv7:  Tensor(\"multiview_12/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
-      "reshape:  Tensor(\"multiview_12/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
-      "view i:  13\n",
-      "conv6:  Tensor(\"multiview_13/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
-      "conv7:  Tensor(\"multiview_13/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
-      "reshape:  Tensor(\"multiview_13/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
-      "view i:  14\n",
-      "conv6:  Tensor(\"multiview_14/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
-      "conv7:  Tensor(\"multiview_14/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
-      "reshape:  Tensor(\"multiview_14/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
-      "view i:  15\n",
-      "conv6:  Tensor(\"multiview_15/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
-      "conv7:  Tensor(\"multiview_15/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
-      "reshape:  Tensor(\"multiview_15/Reshape:0\", shape=(?, 12800), dtype=float32)\n"
+      "bn7:  Tensor(\"multiview/bn7/batchnorm/add_1:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
+      "relu7: Tensor(\"multiview/relu7:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
+      "drop7: Tensor(\"multiview/drop7/mul:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
+      "flat:  Tensor(\"multiview/flat:0\", shape=(?, 12800), dtype=float32)\n"
      ]
     }
    ],
