feat: added accuracy measure, for how often each prediction is closer to the true target rather than the opposite

--- a/capstone/mlnd_capstone.ipynb
+++ b/capstone/mlnd_capstone.ipynb
@@ -1762,7 +1762,6 @@
     "\"\"\"\n",
     "loss function, use reduce_mean (mean squared error)\n",
     "\"\"\"\n",
-    "\n",
     "def get_loss(output, target):\n",
     "    loss = tf.reduce_mean(tf.squared_difference(output,target))\n",
     "    return loss"
@@ -1815,45 +1814,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 153,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
     "accuracy\n",
     "\n",
+    "compare targets_ with output\n",
     "\n",
+    "if targets_ is 1, then output is correct when it's 0.5 or above\n",
+    "if targets_ is 0, then output is correct when it's <0.5\n",
     "\"\"\"\n",
-    "\n",
-    "#correct_pred = tf.equal(tf.argmax(logits, 1), tf.argmax(y, 1))\n",
-    "\n",
-    "\n",
-    "accuracy = tf.reduce_mean(tf.cast(correct_pred, tf.float32), name='accuracy')\n"
+    "def get_accuracy(output,target):\n",
+    "    diff = tf.subtract(target, output)\n",
+    "    abs_diff = tf.abs(diff)\n",
+    "    diff_is_less = tf.less(abs_diff, 0.5)\n",
+    "    diff_is_less_float = tf.cast(diff_is_less, tf.float32)\n",
+    "    accuracy = tf.reduce_mean(diff_is_less_float, name=\"accuracy\")\n",
+    "    return accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1878,6 +1862,8 @@
     "output = dense(view_pool_layer=view_pool_layer, keep_prob=keep_prob_, is_training=is_training_, n_target=17)\n",
     "\n",
     "loss = get_loss(output=output, target=target_)\n",
+    "\n",
+    "accuracy = get_accuracy(output=output, target=target_)\n",
     "\n",
     "opt = get_optimizer(loss=loss, learning_rate=LEARNING_RATE, beta1=BETA1)"
    ]
@@ -2045,7 +2031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 155,
    "metadata": {
     "collapsed": true
    },
@@ -2054,7 +2040,7 @@
     "\"\"\"\n",
     "track training and validation losses\n",
     "\"\"\"\n",
-    "def print_stats(session, x_train_batch, y_train_batch, x_valid, y_valid, loss):\n",
+    "def print_stats(session, x_train_batch, y_train_batch, x_valid, y_valid, loss, accuracy):\n",
     "    \"\"\"\n",
     "    Print information about loss and validation accuracy\n",
     "    : session: Current TensorFlow session\n",
@@ -2069,7 +2055,7 @@
     "                       keep_prob_ : 1.,\n",
     "                       is_training_ : False\n",
     "                      }\n",
-    "    train_loss = session.run(loss, feed_dict=train_loss_dict)\n",
+    "    train_loss, train_accuracy = session.run([loss, accuracy], feed_dict=train_loss_dict)\n",
     "\n",
     "    #validation loss\n",
     "    valid_loss_dict = {input_: x_valid,\n",
@@ -2077,16 +2063,16 @@
     "                       keep_prob_ : 1.,\n",
     "                       is_training_ : False\n",
     "                      }\n",
-    "    valid_loss = session.run(loss, feed_dict=valid_loss_dict)\n",
+    "    valid_loss, valid_accuracy = session.run([loss, accuracy], feed_dict=valid_loss_dict)\n",
     "        \n",
     "    #end while loop\n",
-    "    print(\"train loss {:.4f}, validation loss {:.4f}\".format(train_loss, valid_loss))\n",
+    "    print(\"train loss {:.4f}, validation loss {:.4f}; train accuracy {:.4f}, valid accuracy {:.4f}\".format(train_loss, valid_loss, train_accuracy, valid_accuracy))\n",
     "    return train_loss, valid_loss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 156,
    "metadata": {
     "collapsed": true
    },
@@ -2102,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -2111,91 +2097,91 @@
      "text": [
       "Epoch  1, batch 1:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.4614, validation loss 0.4711\n",
+      "train loss 0.4841, validation loss 0.4969; train accuracy 0.5110, valid accuracy 0.4977\n",
       "Epoch  1, batch 2:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.1195, validation loss 0.0936\n",
+      "train loss 0.2097, validation loss 0.1882; train accuracy 0.7904, valid accuracy 0.8118\n",
       "Epoch  1, batch 3:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.0846, validation loss 0.0936\n",
+      "train loss 0.1397, validation loss 0.1437; train accuracy 0.8603, valid accuracy 0.8563\n",
       "Epoch  1, batch 4:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.0882, validation loss 0.0949\n",
+      "train loss 0.0882, validation loss 0.0936; train accuracy 0.9118, valid accuracy 0.9064\n",
       "Epoch  1, batch 5:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.0717, validation loss 0.0936\n",
+      "train loss 0.0717, validation loss 0.0936; train accuracy 0.9283, valid accuracy 0.9064\n",
       "Epoch  1, batch 6:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.0956, validation loss 0.0936\n",
+      "train loss 0.0956, validation loss 0.0936; train accuracy 0.9044, valid accuracy 0.9064\n",
       "Epoch  1, batch 7:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.0864, validation loss 0.0936\n",
+      "train loss 0.0864, validation loss 0.0936; train accuracy 0.9136, valid accuracy 0.9064\n",
       "Epoch  1, batch 8:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.0846, validation loss 0.0936\n",
+      "train loss 0.0846, validation loss 0.0936; train accuracy 0.9154, valid accuracy 0.9064\n",
       "Epoch  1, batch 9:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.0965, validation loss 0.1009\n",
+      "train loss 0.0882, validation loss 0.0936; train accuracy 0.9118, valid accuracy 0.9064\n",
       "Epoch  1, batch 10:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.0938, validation loss 0.0936\n",
+      "train loss 0.0938, validation loss 0.0936; train accuracy 0.9063, valid accuracy 0.9064\n",
       "Epoch  1, batch 11:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.0846, validation loss 0.0936\n",
+      "train loss 0.0846, validation loss 0.0936; train accuracy 0.9154, valid accuracy 0.9064\n",
       "Epoch  1, batch 12:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.0882, validation loss 0.0936\n",
+      "train loss 0.0882, validation loss 0.0936; train accuracy 0.9118, valid accuracy 0.9064\n",
       "Epoch  1, batch 13:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.0846, validation loss 0.0936\n",
+      "train loss 0.0846, validation loss 0.0936; train accuracy 0.9154, valid accuracy 0.9064\n",
       "Epoch  1, batch 14:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.1176, validation loss 0.0936\n",
+      "train loss 0.1176, validation loss 0.0936; train accuracy 0.8824, valid accuracy 0.9064\n",
       "Epoch  1, batch 15:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.0993, validation loss 0.0936\n",
+      "train loss 0.0993, validation loss 0.0936; train accuracy 0.9007, valid accuracy 0.9064\n",
       "Epoch  1, batch 16:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.1011, validation loss 0.0936\n",
+      "train loss 0.1011, validation loss 0.0936; train accuracy 0.8989, valid accuracy 0.9064\n",
       "Epoch  1, batch 17:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.1048, validation loss 0.0936\n",
+      "train loss 0.1048, validation loss 0.0936; train accuracy 0.8952, valid accuracy 0.9064\n",
       "Epoch  1, batch 18:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.1085, validation loss 0.0936\n",
+      "train loss 0.1085, validation loss 0.0936; train accuracy 0.8915, valid accuracy 0.9064\n",
       "Epoch  1, batch 19:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.0919, validation loss 0.0936\n",
+      "train loss 0.0919, validation loss 0.0936; train accuracy 0.9081, valid accuracy 0.9064\n",
       "Epoch  1, batch 20:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.1066, validation loss 0.0936\n",
+      "train loss 0.1066, validation loss 0.0936; train accuracy 0.8934, valid accuracy 0.9064\n",
       "Epoch  1, batch 21:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.1085, validation loss 0.0936\n",
+      "train loss 0.1085, validation loss 0.0936; train accuracy 0.8915, valid accuracy 0.9064\n",
       "Epoch  1, batch 22:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.0956, validation loss 0.0936\n",
+      "train loss 0.0956, validation loss 0.0936; train accuracy 0.9044, valid accuracy 0.9064\n",
       "Epoch  1, batch 23:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.1011, validation loss 0.0936\n",
+      "train loss 0.1011, validation loss 0.0936; train accuracy 0.8989, valid accuracy 0.9064\n",
       "Epoch  1, batch 24:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.0993, validation loss 0.0936\n",
+      "train loss 0.0993, validation loss 0.0936; train accuracy 0.9007, valid accuracy 0.9064\n",
       "Epoch  1, batch 25:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.1378, validation loss 0.1411\n",
+      "train loss 0.0974, validation loss 0.0936; train accuracy 0.9026, valid accuracy 0.9064\n",
       "Epoch  1, batch 26:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.1085, validation loss 0.0936\n",
+      "train loss 0.1085, validation loss 0.0936; train accuracy 0.8915, valid accuracy 0.9064\n",
       "Epoch  1, batch 27:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.1029, validation loss 0.0936\n",
+      "train loss 0.1029, validation loss 0.0936; train accuracy 0.8971, valid accuracy 0.9064\n",
       "Epoch  1, batch 28:  x_train_batch.shape (32, 16, 14, 14, 512)\n",
       "y_train_batch.shape (32, 17)\n",
-      "train loss 0.0974, validation loss 0.0936\n",
+      "train loss 0.0974, validation loss 0.0936; train accuracy 0.9026, valid accuracy 0.9064\n",
       "Epoch  1, batch 29:  x_train_batch.shape (21, 16, 14, 14, 512)\n",
       "y_train_batch.shape (21, 17)\n",
-      "train loss 0.0924, validation loss 0.0936\n"
+      "train loss 0.0924, validation loss 0.0936; train accuracy 0.9076, valid accuracy 0.9064\n"
      ]
     }
    ],
@@ -2218,7 +2204,7 @@
     "            print(\"x_train_batch.shape\", x_train_batch.shape)\n",
     "            print(\"y_train_batch.shape\", y_train_batch.shape)\n",
     "            train(session=sess, opt=opt, keep_prob=KEEP_PROB, input_batch=x_train_batch, target_batch=y_train_batch)\n",
-    "            train_loss, valid_loss = print_stats(session=sess, x_train_batch=x_train_batch, y_train_batch=y_train_batch, x_valid=x_valid, y_valid=y_valid, loss=loss)\n",
+    "            train_loss, valid_loss = print_stats(session=sess, x_train_batch=x_train_batch, y_train_batch=y_train_batch, x_valid=x_valid, y_valid=y_valid, loss=loss, accuracy=accuracy)\n",
     "            train_loss_l.append(train_loss)\n",
     "            valid_loss_l.append(valid_loss)\n",
     "\n",
