docs: added to capstone_report.  Added training refinement details with tables and plots.  Added model evaluation and justification.

--- a/capstone/mlnd_capstone.ipynb
+++ b/capstone/mlnd_capstone.ipynb
@@ -38,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -628,7 +630,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -664,7 +668,9 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -722,7 +728,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -778,7 +786,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -844,7 +854,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -909,7 +921,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -955,6 +969,7 @@
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -990,7 +1005,9 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1065,14 +1082,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To use vgg19.npy pre-trained weights, it's not on udacity's site; I can download it from the link found in the tensorflow-vgg git account: \n",
-    "https://mega.nz/#!xZ8glS6J!MAnE91ND_WyfZ_8mvkuSa2YcA7q-1ehfSm-Q1fxOvvs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Need to install urllib3 package to use urllib\n",
     "\n",
     "python 2 uses urllib\n",
@@ -1087,7 +1096,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1127,12 +1138,7 @@
     "            vgg_dir + 'vgg16.npy',\n",
     "            pbar.hook)\n",
     "else:\n",
-    "    print(\"Parameter file for vgg16.npy already exists!\")\n",
-    "\n",
-    "if not isfile(vgg_dir + \"vgg19.npy\"):\n",
-    "    print(\"download from here: https://mega.nz/#!xZ8glS6J!MAnE91ND_WyfZ_8mvkuSa2YcA7q-1ehfSm-Q1fxOvvs\")\n",
-    "else:\n",
-    "    print(\"Parameter file for vgg19.npy already exists!\")"
+    "    print(\"Parameter file for vgg16.npy already exists!\")"
    ]
   },
   {
@@ -1144,7 +1150,6 @@
    "outputs": [],
    "source": [
     "from tensorflow_vgg import vgg16\n",
-    "#from tensorflow_vgg import vgg19\n",
     "from tensorflow_vgg import utils\n",
     "import time\n",
     "def get_codes_vgg(image_paths, y, batch_size=10):\n",
@@ -1165,10 +1170,8 @@
     "                for angle in range(angles):\n",
     "                    #grab one angle for all batches, convert 1 channel to 3 channel images\n",
     "                    angle_batch_3c = angle_1c_to_3c(x_batch,angle=angle,height=VGG_HEIGHT,width=VGG_WIDTH)\n",
-    "\n",
     "                    #vgg16.conv5_3 layer is of size (batch, 14, 14, 512); pool5 i of size (batch, 7, 7, 512)\n",
     "                    #vgg16.conv5_2 layer #worse than conv5_3\n",
-    "                    #vgg19.conv5_4 layer (last conv layer) #worse than vgg16 conv5_3\n",
     "                    #codes_batch is ndarray with float32 values\n",
     "                    feed_dict = {input_: angle_batch_3c}\n",
     "                    codes_batch = sess.run(vgg.conv5_3, feed_dict=feed_dict)\n",
@@ -1198,7 +1201,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1345,7 +1350,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1393,7 +1400,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#angles x records x height x width x channel depth\n",
@@ -1417,7 +1426,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1439,7 +1450,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1484,7 +1497,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1558,7 +1573,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1636,7 +1653,9 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def multiview_layers(views, keep_prob=0.5, is_training=True, print_details=False):\n",
@@ -1683,7 +1702,9 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1753,7 +1774,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1792,12 +1815,7 @@
     "    bn2 = tf.layers.batch_normalization(dense2, training=is_training, name='fc_bn2')\n",
     "    relu2 = leaky_relu(bn2,name='fc_relu2')\n",
     "    drop2 = tf.nn.dropout(relu2, keep_prob=keep_prob,name='fc_drop2')\n",
-    "    \"\"\"    \n",
-    "    dense3 = tf.layers.dense(drop2, units=512, name='fc_dense3')\n",
-    "    bn3 = tf.layers.batch_normalization(dense3, training=is_training, name='fc_bn3')\n",
-    "    relu3 = leaky_relu(bn3,name='fc_relu3')\n",
-    "    drop3 = tf.nn.dropout(relu3, keep_prob=keep_prob,name='fc_drop3')    \n",
-    "    \"\"\"    \n",
+    "   \n",
     "    '''\n",
     "    Output should have 17 units, one for each body region\n",
     "    Use sigmoid so that each unit ranges from 0 to 1, independently of the other units\n",
@@ -1811,7 +1829,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1855,7 +1875,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1945,7 +1967,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2108,6 +2132,7 @@
    "cell_type": "code",
    "execution_count": 110,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -2193,13 +2218,7 @@
       "Epoch  6, batch 1, time 3.38m  train loss 0.4601, valid loss 0.5557; train acc 0.7914, valid acc 0.6941\n",
       "Epoch  6, batch 2, time 3.42m  train loss 0.4496, valid loss 0.5377; train acc 0.7886, valid acc 0.7076\n",
       "Epoch  6, batch 3, time 3.46m  train loss 0.4441, valid loss 0.5471; train acc 0.8024, valid acc 0.7059\n",
-      "Epoch  6, batch 4, time 3.51m  train loss 0.4677, valid loss 0.5402; train acc 0.7693, valid acc 0.7118\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch  6, batch 4, time 3.51m  train loss 0.4677, valid loss 0.5402; train acc 0.7693, valid acc 0.7118\n",
       "Epoch  6, batch 5, time 3.55m  train loss 0.4700, valid loss 0.5293; train acc 0.7960, valid acc 0.7241\n",
       "Epoch  6, batch 6, time 3.60m  train loss 0.4334, valid loss 0.5162; train acc 0.8134, valid acc 0.7359\n",
       "Epoch  6, batch 7, time 3.64m  train loss 0.4056, valid loss 0.4921; train acc 0.8373, valid acc 0.7647\n",
@@ -2278,13 +2297,7 @@
       "Epoch 11, batch 5, time 6.83m  train loss 0.2720, valid loss 0.3614; train acc 0.9733, valid acc 0.8841\n",
       "Epoch 11, batch 6, time 6.87m  train loss 0.2578, valid loss 0.3573; train acc 0.9733, valid acc 0.8871\n",
       "Epoch 11, batch 7, time 6.91m  train loss 0.2511, valid loss 0.3492; train acc 0.9761, valid acc 0.8900\n",
-      "Epoch 11, batch 8, time 6.96m  train loss 0.2524, valid loss 0.3490; train acc 0.9733, valid acc 0.8947\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 11, batch 8, time 6.96m  train loss 0.2524, valid loss 0.3490; train acc 0.9733, valid acc 0.8947\n",
       "Epoch 11, batch 9, time 7.00m  train loss 0.2605, valid loss 0.3496; train acc 0.9724, valid acc 0.8924\n",
       "Epoch 11, batch 10, time 7.04m  train loss 0.2632, valid loss 0.3517; train acc 0.9623, valid acc 0.8912\n",
       "Epoch 11, batch 11, time 7.09m  train loss 0.2696, valid loss 0.3492; train acc 0.9632, valid acc 0.8941\n",
@@ -2363,13 +2376,7 @@
       "Epoch 16, batch 9, time 10.28m  train loss 0.2051, valid loss 0.3060; train acc 0.9623, valid acc 0.9053\n",
       "Epoch 16, batch 10, time 10.32m  train loss 0.2026, valid loss 0.3070; train acc 0.9559, valid acc 0.9029\n",
       "Epoch 16, batch 11, time 10.36m  train loss 0.2028, valid loss 0.3022; train acc 0.9568, valid acc 0.9071\n",
-      "Epoch 16, batch 12, time 10.41m  train loss 0.1798, valid loss 0.2979; train acc 0.9632, valid acc 0.9035\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 16, batch 12, time 10.41m  train loss 0.1798, valid loss 0.2979; train acc 0.9632, valid acc 0.9035\n",
       "Epoch 16, batch 13, time 10.45m  train loss 0.1957, valid loss 0.2973; train acc 0.9531, valid acc 0.9041\n",
       "Epoch 16, batch 14, time 10.50m  train loss 0.1783, valid loss 0.2923; train acc 0.9660, valid acc 0.9071\n",
       "Epoch 16, batch 15, time 10.54m  train loss 0.1658, valid loss 0.2907; train acc 0.9723, valid acc 0.9059\n",
@@ -2500,6 +2507,7 @@
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -2563,7 +2571,9 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2625,7 +2635,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2687,7 +2699,9 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2752,7 +2766,9 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2823,7 +2839,9 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2842,7 +2860,6 @@
     "I use just 1 conv layer\n",
     "\n",
     "Results: \n",
-    "It \n",
     "Epoch 20, batch 15, time 8.00m  train loss 0.2409, valid loss 0.3360; train acc 0.9689, valid acc 0.8912\n",
     "\n",
     "Conclusion for next try:\n",
@@ -2883,7 +2900,9 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2944,7 +2963,9 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2959,7 +2980,7 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Training results run 7\n",
+    "Training results run 8\n",
     "I use just 1 conv layer, size 1024;\n",
     "dense layers are 2048 and 512 instead of 1024 and 256\n",
     "\n",
@@ -2969,9 +2990,7 @@
     "\n",
     "Epoch 20, batch 15, time 13.16m  train loss 0.1488, valid loss 0.2898; train acc 0.9827, valid acc 0.9024\n",
     "\n",
-    "\n",
     "Conclusion for next try:\n",
-    "I'll try increasing the units of the dense layers.  They're 1024 and then 256.  I'll try 2048 and then 512.\n",
     "\n",
     "Using vgg16 layer .conv5_3 to create codes\n",
     "\n",
@@ -3017,7 +3036,9 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3076,6 +3097,7 @@
    "cell_type": "code",
    "execution_count": 113,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -3194,9 +3216,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda env:py2]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-env-py2-py"
   },
   "language_info": {
    "codemirror_mode": {
